Small fix to formal definition

--- a/glushkovizer/doc/automata.tex
+++ b/glushkovizer/doc/automata.tex
@@ -141,7 +141,7 @@ En la définissant récursivement de telle sorte~:
 
 \begin{align}
     \delta_w(q, \varepsilon) & = \{q\}                                                                         \\
-    \delta_w(q, a.w)         & = \bigcup_{q' \in \delta(q, a)} \delta_w(q', w) \quad \text{avec}~ a \in \Sigma
+    \delta_w(q, a \cdot w)   & = \bigcup_{q' \in \delta(q, a)} \delta_w(q', w) \quad \text{avec}~ a \in \Sigma
 \end{align}
 
 \begin{example}
