--- a/glushkovizer/doc/prelude.tex
+++ b/glushkovizer/doc/prelude.tex
@@ -32,11 +32,11 @@ du nombre de \(a\) dans le mot \(w\).
     \end{gather}
 \end{example}
 
-Une des opérations les plus essentiels sur les mots est la concaténation de
-mots. On notera donc la concaténation de deux mots \(u = a_1 \cdots a_n\) et
-\(v = b_1 \cdots b_n\) par \(u \cdot v\). Qui est ainsi égal à \(u \cdot v =
-a_1 \cdots a_n b_1 \cdots b_n\). On définit l'ensemble des mots sur \(\Sigma\)
-par \(\Sigma ^ *\). On notera que~:
+Une des opérations les plus essentiels sur les mots est la
+\textit{concaténation} de mots. On notera donc la concaténation de deux mots
+\(u = a_1 \cdots a_n\) et \(v = b_1 \cdots b_n\) par \(u \cdot v\). Qui est
+ainsi égal à \(u \cdot v = a_1 \cdots a_n b_1 \cdots b_n\). On définit
+l'ensemble des mots sur \(\Sigma\) par \(\Sigma ^ *\). On notera que~:
 
 \begin{itemize}[label=\textbullet]
     \item La concaténation est associative \((w \cdot u) \cdot v = w \cdot (u \cdot v)\).
@@ -166,8 +166,8 @@ un élément absorbant.
 \end{example}
 
 Un autre opération importante sur les langages est la \textit{concaténation}.
-Elle est bien sûr définie en utilisant la concaténation des mots qui compose le
-langage. Cette opération est ainsi définie comme ceci~:
+Elle est bien sûr définie en utilisant la concaténation des mots qui compose
+les langages. Cette opération est ainsi définie comme ceci~:
 
 \begin{gather}
     L_1 \cdot L_2 = \{u \cdot v ~|~ u \in L_1, v \in L_2\}
